# meshcore-open

./: README.md  flake.nix  pubspec.yaml  untranslated.json
.github/workflows/: ez_testbuild.yml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  codec2_sources.cmake
docs/: BLE_PROTOCOL.md  ROOM_SYNC.md
documentation/: ble-protocol.md  settings.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/connector/: meshcore_connector.dart  meshcore_connector_usb.dart  meshcore_protocol.dart
lib/helpers/: cayenne_lpp.dart  link_handler.dart  reaction_helper.dart  smaz.dart  utf8_length_limiter.dart
lib/l10n/: app_bg.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hu.arb  app_it.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_bg.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_hu.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_nl.dart  app_localizations_pl.dart  app_localizations_pt.dart  app_localizations_ru.dart  app_localizations_sk.dart  app_localizations_sl.dart  app_localizations_sv.dart  app_localizations_uk.dart  app_localizations_zh.dart  app_nl.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_sk.arb  app_sl.arb  app_sv.arb  app_uk.arb  app_zh.arb
lib/models/: app_settings.dart  channel.dart  channel_message.dart  community.dart  contact.dart  message.dart  (+4 more)
test/: reaction_helper_test.dart
tools/: translate.py
(+101 files in other folders)
